refactor: create editors in ViewModel (AddFile) instead of View (EditorTabContent)
Editors are now instantiated in AddFile() and stored in OpenedFileTab.CodeEditor.
All editors remain in memory; visibility is controlled by IsActive.
Removed EditorTabContent; ContentControl replaced with ItemsControl.

--- a/KID.WPF.IDE/MainWindow.xaml
+++ b/KID.WPF.IDE/MainWindow.xaml
@@ -112,7 +112,7 @@
             </Grid.ColumnDefinitions>
 
             <!-- Код -->
-            <views:CodeEditorView x:Name="CodeEditorView" Grid.Column="0" Margin="0" />
+            <views:CodeEditorsView x:Name="CodeEditorsView" Grid.Column="0" Margin="0" />
 
             <!-- Разделитель -->
             <GridSplitter Grid.Column="1" Width="5"
