refactor: enhance ConsoleOutputView by adding horizontal scroll and no-wrap text settings for improved output display

--- a/KID.WPF.IDE/Views/ConsoleOutputView.xaml
+++ b/KID.WPF.IDE/Views/ConsoleOutputView.xaml
@@ -12,6 +12,8 @@
     <TextBox Name="ConsoleOutputControl"
              IsReadOnly="True"
              VerticalScrollBarVisibility="Auto"
+             HorizontalScrollBarVisibility="Auto"
+             TextWrapping="NoWrap"
              FontFamily="{Binding FontFamily}"
              FontSize="{Binding FontSize}"
              Background="{DynamicResource ConsoleBrush}"
